test/corpus/syntaxdefs.txt
================================================================================
semicolon_only
================================================================================
;
--------------------------------------------------------------------------------

(source_file (Block)) 

================================================================================
shebang
================================================================================
#!/usr/bin/env lua

--------------------------------------------------------------------------------

(source_file (shebang))

================================================================================
shebang_error
:error
================================================================================
#!/usr/bin/env lua
#!/usr/bin/env lua
--------------------------------------------------------------------------------

(source_file (shebang) (ERROR (shebang)))

================================================================================
comments_short
================================================================================
-- comment
--comment
-- [[comment
--------------------------------------------------------------------------------
(source_file
  (comment)
  (comment)
  (comment)
)
================================================================================
comments_long
================================================================================
--[[comment]]
--[[
long comment
]]
--[[a
long
comment
]]
--------------------------------------------------------------------------------
(source_file
  (comment)
  (comment)
  (comment)
)
